--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://192.168.87.141:33061/simple_todo
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.username=springuser
-spring.datasource.password=pass
-
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:sqlserver://data-uni-server.database.windows.net:1433;database=data-uni;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=todo_spring_login
+# TODO: Look for a better way to store password.
+spring.datasource.password=[REDACTED]
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.show-sql= true
 
 server.port=8081
 
