DB password environment variable added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.datasource.url=jdbc:sqlserver://data-uni-server.database.windows.net:1433;database=data-uni;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 spring.datasource.username=todo_spring_login
-# TODO: Look for a better way to store password.
-spring.datasource.password=[REDACTED]
+spring.datasource.password=${TODO_DB_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.show-sql= true
 
 server.port=8081
-
