--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:sqlserver://data-uni-server.database.windows.net:1433;database=data-uni;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-spring.datasource.username=todo_spring_login
+spring.datasource.url=jdbc:mysql://20.234.56.99:3306/simple_todo_app
+spring.datasource.username=todo_user
 spring.datasource.password=${TODO_DB_PASSWORD}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql= true
 
 server.port=8081
